--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "typia": "^5.0.2"
   },
   "devDependencies": {
     "@nestia/e2e": "^0.3.6",
