--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "ES2020",
+    "target": "ES6",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
@@ -35,6 +35,9 @@
       ],
       "@modules/*": [
         "src/modules/*"
+      ],
+      "@libs/*":[
+        "src/libs/*"
       ]
     },
     "plugins": [
