--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestia/core": "^1.6.7",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.1.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "mysql": "^2.18.1",
