--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "postinstall": "ts-patch install"
   },
   "dependencies": {
-    "@nestia/core": "^1.6.7",
+    "@nestia/core": "^2.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.11",
     "@nestjs/typeorm": "^10.0.0",
     "mysql2": "^3.6.1",
     "passport": "^0.6.0",
@@ -38,7 +39,7 @@
   },
   "devDependencies": {
     "@nestia/e2e": "^0.3.6",
-    "@nestia/sdk": "^1.6.7",
+    "@nestia/sdk": "^2.0.2",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
