--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,9 +38,18 @@
       ],
       "@libs/*":[
         "src/libs/*"
+      ],
+      "@providers/*":[
+        "src/providers/*"
+      ],
+      "@decorators/*":[
+        "src/decorators/*"
       ]
     },
     "plugins": [
+      {
+        "transform": "typia/lib/transform"
+      },
       {
         "transform": "@nestia/core/lib/transform",
         /**
@@ -64,10 +73,8 @@
          *   - null: Just use JSON.stringify() function, without boosting
          */
         "stringify": "assert"
-      },
-      {
-        "transform": "typia/lib/transform"
       }
+      
     ]
   }
 }
