[Feat] Soundtrack Repository 제거 & Module 부분 수정
CustomRepository 를 사용한 결과 , 계속 metadata 에러 발생해 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
         "src/services/*"
       ],
       "@repositories/*": [
-        "src/repositoires/*"
+        "src/repositories/*"
       ],
       "@models/*": [
         "src/models/*"
