--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@nestjs/passport": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "moment": "^2.29.4",
     "mysql2": "^3.6.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
